fix gradle build, add gradle build for distribution archive.